--- a/_includes/layouts/profile.html
+++ b/_includes/layouts/profile.html
@@ -7,7 +7,7 @@
             <div class="profile-name"><span class="profile-name-underline">Emran</span> Poh</div>
             <div class="profile-details">
                 <div class="profile-position">UX Researcher & Designer</div>
-                <div class="profile-university">SMU HCI Lab</div>
+                <div class="profile-university">SMU HAI Lab</div>
                 <div class="profile-location">
                     <i class="fas fa-map-marker-alt"></i>
                     <span>{{ site.location }}</span>
@@ -97,11 +97,13 @@
     
     .profile-content {
         gap: 0.75rem;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
     
     .profile-image {
-        width: 64px;
-        height: 64px;
+        width: 200px;
+        height: 200px;
     }
     
     .profile-name {
