Fix missing thesis images and update site content
- Add missing thesis images (thesis-mcomp.png, thesis-bsc.png) to resolve Jekyll build errors
- Update publications and theses data files
- Add new SVG icons for PDF and citation buttons
- Update various layout components and styling
- Improve site navigation and content organization

--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -1,15 +1,15 @@
 <section class="w-full intro-section">
   <div class="h-64 mb-4 introduction">
     <div class="intro-block">
-        <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> focused on <mark>human creativity</mark>. I design, build, and study tools that help novices develop domain expertise — with an emphasis on empowering humans to be more… human (authentic + expressive). Currently working on AI Tutor design to enhance learning experiences through intelligent human-agent collaboration.</p>
+        <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> focused on <mark>human creativity</mark>. I design, build, and study tools that help novices develop domain expertise—with an emphasis on empowering humans to be more... human (authentic + expressive). I'm currently working on AI Tutor design to enhance learning experiences through intelligent human-agent collaboration.</p>
     </div>
     <div class="intro-block">
         <p class="intro-text">
-            Doing my Ph.D. CS at SMU, part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously completed MComp CS at NUS where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a>, and B.Sc. CS (1st) from UofG under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
+            I'm doing my Ph.D. in CS at SMU, as part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously, I completed my MComp in CS at NUS, where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a>, and my B.Sc. in CS (1st class) from UofG under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
         </p>
     </div>
     <div class="intro-block">
-        <p class="intro-text">Enjoy building and occasionally crashing interplanetary rockets in Kerbal Space Program 🚀 and creating unnecessarily complicated factory designs in Factorio 🔧</p>
+        <p class="intro-text">I enjoy building and occasionally crashing interplanetary rockets in Kerbal Space Program 🚀 and creating unnecessarily complicated factory designs in Factorio 🔧</p>
     </div>
   </div>
 </section>
