--- a/_includes/layouts/profile.html
+++ b/_includes/layouts/profile.html
@@ -6,6 +6,7 @@
         <div class="profile-info">
             <div class="profile-name"><span class="profile-name-underline">Emran</span> Poh</div>
             <div class="profile-details">
+                <div class="profile-position">1st Year PhD Student</div>
                 <div class="profile-position">UX Researcher & Designer</div>
                 <div class="profile-university">SMU HAI Lab</div>
                 <div class="profile-location">
@@ -27,7 +28,7 @@
 .profile-content {
     display: flex;
     gap: 1rem;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .profile-image {
