--- a/_layouts/pages/default.html
+++ b/_layouts/pages/default.html
@@ -46,12 +46,14 @@
 
     @media (min-width: 769px) {
       body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
         margin: 0;
         padding: 2rem;
+        min-height: 100vh;
+      }
+      .page-center-wrap {
+        display: flex;
+        justify-content: center;
+        min-height: 100vh;
       }
       .page-container {
         display: flex;
@@ -73,26 +75,25 @@
       }
       .container {
         width: 100%;
-        height: 90vh;
         max-width: 100%;
-        max-height: 90vh;
         background: white;
         border-radius: 1rem;
         padding: 2rem;
         position: relative;
         display: flex;
         flex-direction: column;
+        min-height: 0;
       }
       .content {
         flex: 1;
-        overflow-y: auto;
+        min-height: 0;
       }
     }
   </style>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 </head>
 <body style="min-height:100vh;">
-  <div class="page-center-wrap" style="display:flex;justify-content:center;align-items:center;min-height:100vh;width:100vw;">
+  <div class="page-center-wrap" style="display:flex;justify-content:center;min-height:100vh;width:100vw;">
     <div class="page-container">
       <div class="main-content-row">
         <div class="container" id="main-container">
